--- a/css/screen.css
+++ b/css/screen.css
@@ -1,3 +1,11 @@
+html{
+  font-size: 40px;
+  text-align: center;
+}
+div {
+    height: 200px;
+    font-size: 20px;
+}
 @viewport {
   width: device-width ;
   zoom: 1.0 ;
