--- a/css/screen.css
+++ b/css/screen.css
@@ -1,4 +1,9 @@
-html{
+body{
+  background-color: pink;
+}
+
+
+/*html{
   font-size: 40px;
   text-align: center;
 }
@@ -9,4 +14,4 @@ div,fieldset {
 @-ms-viewport {
   width: device-width ;
 }
-
+*/
