--- a/css/screen.css
+++ b/css/screen.css
@@ -1,7 +1,3 @@
-body{
-  background-color: pink;
-}
-
 
 /*html{
   font-size: 40px;
@@ -15,3 +11,51 @@ div,fieldset {
   width: device-width ;
 }
 */
+body{
+  background-color: pink;
+}
+@media screen and (min-width: 500px){ 
+  legend {
+    font-size: 5px;
+    font-weight: bold;
+  }
+  form {
+    width:50%;
+    text-align: center;
+    background-color: white;
+  }
+  label{
+    display: block;
+    text-align: center; 
+    font-size: 1.5em;
+  }
+  input {
+    display: block;
+    text-align: center;
+    width: 55%;
+  }
+  #submitbutton {
+    text-align: center;
+    background-color: grey;
+    color: black;
+    width: fit-content;
+  }
+}
+
+
+@media screen and (min-width: 1000px){
+  form {
+    width: 500px;
+    float: center;
+  }
+  legend {
+    font-size: 10px;
+  }
+  label{
+    font-size: 10px;
+  }
+  #submitbutton {
+    font-size: 5px;
+  }
+}
+
