--- a/css/screen.css
+++ b/css/screen.css
@@ -1,7 +1,7 @@
 body{
   background-color: pink;
 }
-@media screen and (min-width: 500px){
+@media screen and (min-width: 500em){
   legend {
     font-size: 5px;
     font-weight: bold;
@@ -30,7 +30,7 @@ body{
 }
 
 
-@media screen and (min-width: 1000px){
+@media screen and (min-width: 1000em){
   form {
     width: 500px;
   }
