--- a/css/screen.css
+++ b/css/screen.css
@@ -1,13 +1,13 @@
 body{
   background-color: pink;
 }
-@media screen and (min-width: 500em){
+@media screen and (min-width: 500px){
   legend {
     font-size: 5px;
     font-weight: bold;
   }
   form {
-    width:50%;
+    width:80%;
     text-align: center;
     background-color: white;
   }
@@ -20,7 +20,7 @@ body{
   input {
     display: block;
     text-align: center;
-    width: 55%;
+    width: 95%;
   }
   #submitbutton {
     text-align: center;
@@ -31,9 +31,9 @@ body{
 }
 
 
-@media screen and (min-width: 1000em){
+@media screen and (min-width: 1000px){
   form {
-    width: 500px;
+    width: 700px;
   }
   legend {
     font-size: 10px;
